--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ logs/debug-2.log.gz
 logs/debug-3.log.gz
 logs/debug-4.log.gz
 logs/debug-5.log.gz
+*.mca
+journeymap
+saves/*
+screenshots/2024-02-12_15.40.43.png
+saves/New World
+.dat
